syntax = "proto3";

option csharp_namespace = "MessageGeneratorGRPC";

package Tranmitter;

message Message2 {
  string clientID = 1;
  string apiKey = 2;
  string msgId = 3;
  string phoneNumber = 4;
  int32 localPriority = 5;
  string text = 6;
}


message Acknowledgement2
{
  string replyCode = 1;
}

service Queue {
  rpc QueueMessage(Message2) returns (Acknowledgement2);
}




